--- a/example/test.gmi
+++ b/example/test.gmi
@@ -2,6 +2,24 @@
 This is a paragraph test
 
 ## Heading 2
+There is another paragraph Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed memento te, quae nos sentiamus, omnia probare, nisi quod verbis aliter utamur, mihi autem vestrorum nihil probari. Sed id ne cogitari quidem potest quale sit, ut non repugnet ipsum sibi. Laelius clamores sofòw ille so lebat Edere compellans gumias ex ordine nostros. Summus dolor plures dies manere non potest? Ita relinquet duas, de quibus etiam atque etiam consideret. In primo enim ortu inest teneritas ac mollitia quaedam, ut nec res videre optimas nec agere possint. Ex quo intellegitur idem illud, solum bonum esse, quod honestum sit, idque esse beate vivere: honeste, id est cum virtute, vivere. Duo Reges: constructio interrete. Nihil ad rem! Ne sit sane; Etsi qui potest intellegi aut cogitari esse aliquod animal, quod se oderit? Nec tamen ille erat sapiens quis enim hoc aut quando aut ubi aut unde? Quid ergo dubitamus, quin, si non dolere voluptas sit summa, non esse in voluptate dolor sit maximus? Eam si varietatem diceres, intellegerem, ut etiam non dicente te intellego; Hoc enim constituto in philosophia constituta sunt omnia. Hoc loco discipulos quaerere videtur, ut, qui asoti esse velint, philosophi ante fiant. Videmus in quodam volucrium genere non nulla indicia pietatis, cognitionem, memoriam, in multis etiam desideria videmus. Si vero id etiam explanare velles apertiusque diceres nihil eum fecisse nisi voluptatis causa, quo modo eum tandem laturum fuisse existimas? Quid est, quod ab ea absolvi et perfici debeat? Cur fortior sit, si illud, quod tute concedis, asperum et vix ferendum putabit?
 
+His singulis copiose responderi solet, sed quae perspicua sunt longa esse non debent. Fadio Gallo, cuius in testamento scriptum esset se ab eo rogatum ut omnis hereditas ad filiam perveniret. Ego vero volo in virtute vim esse quam maximam; Quicquid porro animo cernimus, id omne oritur a sensibus; Quia nec honesto quic quam honestius nec turpi turpius.
 
+* Mercury
+* Gemini
+* Apollo
+
+=> gemini://example.com A website
+=> gemini://example2.com
+
+Here is a quote:
+> I contend that text-based websites should not exceed in size the major works of Russian literature.
+
+```
+S N E E D
+    F E E D
+        A N D
+    S E E D
+```
 
